tests/baselines/reference/sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2(target=es2015).errors.txt
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(24,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(27,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(30,6): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(33,6): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(33,9): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(39,6): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(39,9): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(45,6): error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(45,9): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(52,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(55,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(58,6): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(61,6): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(64,6): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(67,6): error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(71,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(74,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(77,6): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(81,5): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(82,9): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(89,6): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(90,5): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(97,6): error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(98,5): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(106,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(109,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts(112,6): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForArrayBindingPatternDefaultValues2.ts (27 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    type MultiSkilledRobot = [string, [string, string]];
    
    let robotA: Robot = [1, "mower", "mowing"];
    function getRobot() {
        return robotA;
    }
    
    let multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    let multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    function getMultiRobot() {
        return multiRobotA;
    }
    
    let nameA: string, primarySkillA: string, secondarySkillA: string;
    let numberB: number, nameB: string;
    let numberA2: number, nameA2: string, skillA2: string, nameMA: string;
    let numberA3: number, robotAInfo: (number | string)[], multiRobotAInfo: (string | [string, string])[];
    let i: number;
    
    for ([, nameA = "name"] = robotA, i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, nameA = "name"] = getRobot(), i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, nameA = "name"] = [2, "trimmer", "trimming"], i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, [
         ~~~~
            ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["none", "none"]] = multiRobotA, i = 0; i < 1; i++) {
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for ([, [
         ~~~~
            ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["none", "none"]] = getMultiRobot(), i = 0; i < 1; i++) {
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for ([, [
         ~~~~
            ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["none", "none"]] = ["trimmer", ["trimming", "edging"]], i = 0; i < 1; i++) {
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    
    for ([numberB = -1] = robotA, i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([numberB = -1] = getRobot(), i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([numberB = -1] = [2, "trimmer", "trimming"], i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([nameB = "name"] = multiRobotA, i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for ([nameB = "name"] = getMultiRobot(), i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for ([nameB = "name"] = ["trimmer", ["trimming", "edging"]], i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    
    for ([numberA2 = -1, nameA2 = "name", skillA2 = "skill"] = robotA, i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([numberA2 = -1, nameA2 = "name", skillA2 = "skill"] = getRobot(), i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([numberA2 = -1, nameA2 = "name", skillA2 = "skill"] = [2, "trimmer", "trimming"], i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let
        [nameMA = "noName",
        ~~~~~~~~~~~~~~~~~~~
            [
    ~~~~~~~~~
            ~
                primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ] = ["none", "none"]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        ] = multiRobotA, i = 0; i < 1; i++) {
    ~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for ([nameMA = "noName",
         ~~~~~~~~~~~~~~~~~~~
        [
    ~~~~~
        ~
            primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        ] = ["none", "none"]
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    ] = getMultiRobot(), i = 0; i < 1; i++) {
    ~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for ([nameMA = "noName",
         ~~~~~~~~~~~~~~~~~~~
        [
    ~~~~~
        ~
            primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        ] = ["none", "none"]
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    ] = ["trimmer", ["trimming", "edging"]], i = 0; i < 1; i++) {
    ~
!!! error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    
    for ([numberA3 = -1, ...robotAInfo] = robotA, i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for ([numberA3 = -1, ...robotAInfo] = getRobot(), i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for ([numberA3 = -1, ...robotAInfo] = <Robot>[2, "trimmer", "trimming"], i = 0; i < 1; i++) {
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }